[package]
name = "rust-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.38", features = ["now", "clock", "alloc", "std", "serde"] }
jsonwebtoken = "9.3.0"
#time = { version = "0.3.36", features = ["std", "parsing", "local-offset"] }